--- a/src/data-access/data-access.csproj
+++ b/src/data-access/data-access.csproj
@@ -40,9 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Players\IPlayer.cs" />
+    <Compile Include="PlayerRepo\IPlayerRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scores\IScore.cs" />
+    <Compile Include="ScoreRepo\IScoreRepository.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\entities\entities.csproj">
+      <Project>{c30ddee1-a1e3-4ae1-81a3-c1dfc0f792d5}</Project>
+      <Name>entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
