--- a/src/data-access/data-access.csproj
+++ b/src/data-access/data-access.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameRepo\IGameRepository.cs" />
     <Compile Include="PlayerRepo\IPlayerRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScoreRepo\IScoreRepository.cs" />
