Modified all the repo interfaces.

--- a/src/data-access/data-access.csproj
+++ b/src/data-access/data-access.csproj
@@ -41,8 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameRepo\IGameRepository.cs" />
+    <Compile Include="GameRepo\InMemoryGameRepository.cs" />
+    <Compile Include="PlayerRepo\InMemoryPlayerRepository.cs" />
     <Compile Include="PlayerRepo\IPlayerRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreRepo\InMemoryScoreRepository.cs" />
     <Compile Include="ScoreRepo\IScoreRepository.cs" />
   </ItemGroup>
   <ItemGroup>
